# apps/api/openapi.json
@@ -673,6 +673,11 @@
                           "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
                           "maxLength": 36
                         },
+                        "argusId": {
+                          "type": "string",
+                          "pattern": "^[^\\u0000-\\u001f\\u007f]+$",
+                          "maxLength": 65536
+                        },
                         "email": {
                           "type": "string",
                           "format": "email",
@@ -747,6 +752,7 @@
                         "bound",
                         "userId",
                         "tenantId",
+                        "argusId",
                         "email",
                         "displayName",
                         "role",
